# claude--monitor

./: README.md  dashboard.html  install.py  load_demo.py  server.py
docs/team-dev/: acceptance-report.md  (+2 more)
hs-battlegrounds-ai/: .gitignore  config.yaml  pyproject.toml
hs-battlegrounds-ai/data/: cards.json  heroes.json  minion_types.json
hs-battlegrounds-ai/src/hs_bg_ai/: __init__.py  config.py  main.py  platform_utils.py
hs-battlegrounds-ai/src/hs_bg_ai/ai/: __init__.py  engine.py  evaluator.py  turn_planner.py
hs-battlegrounds-ai/src/hs_bg_ai/control/: __init__.py  controller.py  hotkeys.py  takeover.py
hs-battlegrounds-ai/src/hs_bg_ai/core/: __init__.py  errors.py  events.py  orchestrator.py
hs-battlegrounds-ai/src/hs_bg_ai/executor/: __init__.py  coords.py  mouse.py  queue.py  time_manager.py  timing.py
hs-battlegrounds-ai/src/hs_bg_ai/log_engine/: __init__.py  dispatcher.py  watcher.py
hs-battlegrounds-ai/src/hs_bg_ai/log_parsers/: __init__.py  base.py  board_parser.py  hand_parser.py  hero_parser.py  opponent_parser.py  resource_parser.py  shop_parser.py  turn_parser.py
hs-battlegrounds-ai/src/hs_bg_ai/models/: __init__.py  actions.py  cards.py  enums.py  game_state.py  heroes.py
hs-battlegrounds-ai/src/hs_bg_ai/recovery/: __init__.py  base.py  disconnect_recovery.py  exec_recovery.py  log_recovery.py  window_recovery.py
hs-battlegrounds-ai/tests/: conftest.py
hs-battlegrounds-ai/tests/acceptance/: __init__.py  test_prd_acceptance.py
hs-battlegrounds-ai/tests/integration/: test_ai_to_executor.py  test_log_to_state.py  test_state_to_ai.py
(+29 files in other folders)
